# Build-Powerful-RAG-Pipelines

./: README.md  README.me  main.py  pyproject.toml  requirements.txt
1. Introduction to RAG/1.2-Intro - RAG/: 1.2.1-Introduction to RAG.ipynb  1.2.2-PromptEng vs Fine-Tuning vs RAG.ipynb
2. Core Components In RAG/: 2.1-Core Components in RAG.ipynb
3. Data Ingestion And Data Parsing Techniques/: 3.3-dataparsingdoc.ipynb  3.5-jsonparsing.ipynb  3.6-databaseparsing.ipynb
3. DataIngestParsing/: 3.0-langchain_document_structure.ipynb  3.1-dataingestion.ipynb  3.2-dataparsingpdf.ipynb  3.3-dataparsingdoc.ipynb  3.4-csvexcelparsing.ipynb  3.5-jsonparsing.ipynb
3. DataIngestParsing/data/databases/: company.db
4. Vector Embeddings And Vector Databases/: 4.3-openaiembeddings.ipynb  4.4-cosinessusingopenaiembeddings.ipynb
4. VectorEmbeddingsAndDatabases/: 4.0-Introduction.ipynb  4.1-Embeddings.ipynb  4.2-Embeddingswithhuggingfacemodel.ipynb
Ultimate RAG/0-DataIngestParsing/: 1-dataingestion.ipynb
Ultimate RAG/1. Data Ingestion And Data Parsing Techniques/: 2-dataparsingpdf.ipynb  5-jsonparsing.ipynb
Ultimate RAG/2. Vector Embeddings And Vector Databases/: embedding (1).ipynb  openaiembeddings.ipynb
